# 01_efficentnet

./: .gitignore  README.md  pyproject.toml
notebooks/: testing.ipynb
notebooks/.ipynb_checkpoints/: testing-checkpoint.ipynb
src/: data_prep.py  engine.py  inference.py  main.py  model.py  predict.py
